--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
-    <script src="script.js"></script>
+
+    <div id="results"></div>
+    <script defer src="script.js"></script>
 </body>
 </html>
