--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
-
+    <div class="buttons">
+        <button id="rock">🪨 Rock 🪨</button>
+        <button id="paper">🧻 Paper 🧻</button>
+        <button id="scissors">✂️ Scissors ✂️</button>
+    </div>
     <div id="results"></div>
     <script defer src="script.js"></script>
 </body>
